030-software/fluxcd/apps/thelounge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thelounge
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: thelounge
  template:
    metadata:
      labels:
        app: thelounge
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: thelounge
          image: ghcr.io/thelounge/thelounge:4.5.2@sha256:bae46016776b0a18639dcaff69a103b3bbee9cbb40e86cd24fb278eccc6bac7b
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 100m
          volumeMounts:
            - name: config
              mountPath: /var/opt/thelounge
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: thelounge-config
