030-software/fluxcd/apps/thelounge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: thelounge
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: thelounge
