030-software/fluxcd/apps/thelounge/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thelounge
  annotations:
    dashboard.${domain}/icon: forum
    dashboard.${domain}/name: thelounge
    dashboard.${domain}/url: https://thelounge.${domain}
spec:
  hostnames:
  - thelounge.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: thelounge
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
